k8s/command-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: command-service
  namespace: autotrace
spec:
  type: ClusterIP

  selector:
    app: command

  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
