k8s/query-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-service
  namespace: autotrace
spec:
  type: ClusterIP

  selector:
    app: query

  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
