k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/command(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: command-service
                port:
                  number: 3000

          - path: /api/query(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: query-service
                port:
                  number: 3000

          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
